--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jun 04 08:56:11 CEST 2019
-sdk.dir=D\:\\Users\\bwildd\\AppData\\Local\\Android\\Sdk
+#Wed Jun 12 15:53:42 CEST 2019
+sdk.dir=D\:\\Users\\bweibm\\AppData\\Local\\Android\\Sdk
